--- a/app/assets/stylesheets/story_show/story_show_author.scss
+++ b/app/assets/stylesheets/story_show/story_show_author.scss
@@ -2,48 +2,46 @@
 //     height: 127px;
 //     background-color: blue;
 // }
-.story-show{
-    // font-family: Georgia, 'Times New Roman', Times, serif;
-}
 
-.story-show-author{
-    display: flex; 
+.story-show-details-author-follow-like-container{
+    display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 300px;
-    height: 100px;
-    // background-color: blue;
-
-    .story-show-profile-pic{
-        border-radius: 100%;
-        height: 50px;
-        width: 50px;
-        // background-color: purple;
-        border: 1px solid black;
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    .story-show-author-details{
-        display:flex;
-        flex-direction: column;
-        height: 50px;
+    .story-show-author{
+        display: flex; 
         justify-content: space-between;
-        // background-color: red;
-        .story-show-details-name-follow{
+        align-items: center;
+        width: 300px;
+        height: 100px;
+        // background-color: blue;
+
+        .story-show-profile-pic{
+            border-radius: 100%;
+            height: 50px;
+            width: 50px;
+            // background-color: purple;
+            border: 1px solid black;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .story-show-author-details{
             display:flex;
-            width: 200px;
+            flex-direction: column;
             justify-content: space-between;
-            
+            height: 50px;
+            // background-color: red;
+                
             .story-show-user-name-link{
                 text-decoration: none;
+                width: 200px;
                 
                 .story-show-name{
                 font-size: 20px;
-                width:100px;
+                // width:100px;
                 text-decoration: none;
+                // text-align: center;
                 color: black;
-            }
+                }
 
             }
     
@@ -69,22 +67,24 @@
                 border: 1px solid rgb(29, 10, 10);
                 color: rgb(29, 10, 10);
             }
-        }
 
-        .story-show-details-date-star{
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            color: rgba(138, 138, 138, 0.82)
-        }
+            .story-show-details-date-star{
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                color: rgba(138, 138, 138, 0.82)
+            }
+        }    
+
     }
 
-    
+    .liked-container{
+        display: flex;
+        align-items: flex-end;
+        width: 120px;
+        justify-content: space-between;
+        position: relative;
+        bottom: 10px;
+    }
 
 }
-
-
-
-
-
-
